# margo

./: Cargo.toml  LICENSE-MIT
margo-fetch/: Cargo.toml
margo-fetch-bin/: Cargo.toml
margo-fetch-bin/src/: main.rs
margo-fetch/src/: downloader.rs  lib.rs  source_resolver.rs
margo-fetch/src/downloader/: simple_reqwest.rs
margo-fetch/src/source_resolver/: remote_registry.rs
src/: downloader.rs  helpers.rs  link_resolver.rs  main.rs  source_resolver.rs
src/downloader/: simple_reqwest_downloader.rs
src/link_resolver/: remote_registry.rs
src/source_resolver/: remote_registry.rs
