[package]
name = "margo-fetch"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"

[dependencies]
toml = "0.4.10"
serde_derive = "1.0.82"
serde = "1.0.82"
regex = "1.1.0"
hyper = "0.12.19"
hyper-tls = "0.3.1"
serde_json = "1.0.34"
futures = "0.1.25"
tokio-core = "0.1.17"
reqwest = "0.9.5"
env_logger = "0.6.0"
log = "0.4.6"
hex = "0.3.2"
sha2 = "0.8.0"
