[package]
name = "margo-fetch"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"

[dependencies]
# core
serde_derive = "1.0.82"
serde = { version = "1.0.82", default-features = false }
log = "0.4.6"
futures = "0.1.25"
# std
regex = { version = "1.1.0", optional = true }
# downloader_checksum
hex = { version = "0.3.2", optional = true }
sha2 = { version = "0.8.0", optional = true }
# downloader_simple_reqwest
reqwest = { version = "0.9.5", optional = true }
# source_resolver_remote_registry
hyper = { version = "0.12.19", optional = true }
hyper-tls = { version = "0.3.1", optional = true }
serde_json = { version = "1.0.34", optional = true }

[features]
default = ["downloader_checksum", "std"]
std = ["serde/std", "regex"]

downloader_checksum = ["sha2", "hex"]
downloader_simple_reqwest = ["downloader_checksum", "reqwest"]
source_resolver_remote_registry = ["hyper", "hyper-tls", "serde_json"]
